fix #408, Partitioned tables definition now includes a primary key definition. If no identifiers are present then the primary key definition is not generated.